Move tooltip to bottom; remove overlow visible; issue opentargets/platform#946

--- a/app/css/_tables.scss
+++ b/app/css/_tables.scss
@@ -670,7 +670,7 @@
 
     .scroll-table-panel .table-panel{
         overflow-x: auto;
-        overflow: visible;
+        // overflow: visible;
     }
 
 
